--- a/0-homepage.html
+++ b/0-homepage.html
@@ -32,7 +32,7 @@
         <div class="main-button text-center mt-5 mx-auto">REGISTER FOR FREE</div>
         <h2 class="hero-subtitle text-center mb-5"><span>Learn</span> from the pros</h2>
 
-        <div class="profiles d-flex justify-content-between   ">
+        <div class="profiles d-flex justify-content-between flex-wrap  ">
             <div class="profile text-center">
                 <figure class="profile-photo">
                     <img src="./images/profile_1.jpg" alt="profile-photo">
