--- a/3-homepage.html
+++ b/3-homepage.html
@@ -65,8 +65,8 @@
     </div>
 
 
-    <div id="carouselExampleControls" class="carousel slide opinion  text-white" data-ride="carousel">
-        <div class="carousel-inner >
+    <div id="carouselExampleControls" class="carousel slide opinion text-white" data-ride="carousel">
+        <div class="carousel-inner  pt-3">
           <div class="carousel-item active">
               <div class="container-opinion d-flex justify-content-center flex-column  flex-sm-row align-items-center">
                 <figure class="mx-auto profile-photo">
@@ -216,11 +216,43 @@
                 </div>
             </div>
         </div>
-
-
         </div>
+    </div>
 
+    <div class="container-fluid section-free pb-5 ">
+        <h2 class="text-center mb-5 "><span class="popular">Free</span> membership</h2>
 
+        <div class="membership-group d-flex justify-content-center  flex-wrap">
+            <div class="membership text-center mb-5">
+                <figure class="smile mx-auto">
+                    <img src="./images/smile_on.png" alt="smile" class="w-100 h-100">
+                </figure>
+                <p class="title">Lorem ipsum</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="membership text-center mb-5">
+                <figure class="smile mx-auto">
+                    <img src="./images/smile_on.png" alt="smile" class="w-100 h-100">
+                </figure>
+                <p class="title">Lorem ipsum</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="membership text-center mb-5">
+                <figure class="smile mx-auto">
+                    <img src="./images/smile_on.png" alt="smile" class="w-100 h-100">
+                </figure>
+                <p class="title">Lorem ipsum</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="membership text-center mb-5">
+                <figure class="smile mx-auto">
+                    <img src="./images/smile_on.png" alt="smile" class="w-100 h-100">
+                </figure>
+                <p class="title">Lorem ipsum</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+        </div>
+        <div class="main-button text-center  mx-auto ">REGISTER FOR FREE</div>
     </div>
 
 
