--- a/homepage.html
+++ b/homepage.html
@@ -17,10 +17,10 @@
                 <img class="mr-3 logo mx-auto mx-sm-0 mb-2 mb-sm-0 mr-sm-3" src="./images/smile_off.png" alt="">
                 <img  class="logo-text mx-auto mx-sm-0"src="./images/logo.png" alt="">
             </figure>
-            <ul class=" d-sm-flex flex-md-row flex-sm-row flex-column mx-auto mx-sm-0" id="menu">
-                <li class="mb-4 mb-sm-0" id="item-1">COURSES</li>
-                <li class="mb-4  mb-sm-0" id="item-2">PRICING</li>
-                <li class="mb-4  mb-sm-0" id="item-3">LOGIN</li>
+            <ul class=" courses d-sm-flex flex-md-row flex-sm-row flex-column mx-auto mx-sm-0" id="menu">
+                <li class="mb-4 mb-sm-0" id="item-1"><a class=" text-uppercase text-center" href="courses.html">COURSES</a></li>
+                <li class="mb-4 mb-sm-0" id="item-2"><a class=" text-uppercase text-center" href="pricing.html">PRICING</a></li>
+                <li class="mb-4 mb-sm-0" id="item-3"><a class=" text-uppercase text-center" href="homepage.html">LOGIN</a></li>
             </ul>
         </div>
         <h1 class="text-center">Get schooled</h1>
